Add structure with html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Project: Rock Paper Scissors</title>
   </head>
   <body>
+    <main>
+      <div id="players-score">
+        <p>Player</p>
+        <p>Computer</p>
+      </div>
+      <div id="choice">
+        <button id="rock"><span>&#9994;</span>Rock</button>
+        <button id="paper"><span>&#9995;</span>Paper</button>
+        <button id="scissors"><span>&#9996;</span>Scissors</button>
+      </div>
+      <div id="result"></div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
