Add an id attribute to both player and computer

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <main>
       <div id="players-score">
-        <p>Player</p>
-        <p>Computer</p>
+        <p id="player">Player</p>
+        <p id="Computer">Computer</p>
       </div>
       <div id="choice">
         <button id="rock"><span>&#9994;</span>Rock</button>
