Fix a typo in the attribute of the <p> element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <div id="players-score">
         <p id="player">Player</p>
-        <p id="Computer">Computer</p>
+        <p id="computer">Computer</p>
       </div>
       <div id="choice">
         <button id="rock"><span>&#9994;</span>Rock</button>
